fixing package identifier for older pipenv.

--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,8 @@ black = "*"
 pre-commit = "*"
 
 [packages]
-pandas = "1.0.3"
-bokeh = "2.0.2"
+pandas = "==1.0.3"
+bokeh = "==2.0.2"
 
 [requires]
 python_version = "3.8"
